<!--
  ~ Copyright (c) 2020-2023 Fei Kuan.
  ~
  ~ This file is part of Chinese Converter
  ~ (see <https://github.com/fei0316/OpenCC-android-app>).
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="action_about">關於</string>
    <string name="enter_text_prompt">請輸入需轉換的文字：</string>
    <string name="convert_button">轉換</string>
    <string name="clear_button">清除</string>
    <string name="menu_trans_text">繁簡轉換</string>
    <string name="menu_readonly">已轉換的文字已複製到剪貼簿</string>
    <string name="main_simp_trad">簡體轉繁體</string>
    <string name="main_trad_simp">繁體轉簡體</string>
    <string name="main_tw_hk">繁體異體轉換</string>
    <string name="main_orig_tw">原文是臺灣標準</string>
    <string name="main_orig_hk">原文是香港標準</string>
    <string name="main_to_tw">轉換爲臺灣標準</string>
    <string name="main_to_hk">轉換爲香港標準</string>
    <string name="main_no_conv">不轉換</string>
    <string name="main_to_twP">臺灣用詞</string>
    <string name="main_to_cnP">中國大陸用詞</string>
    <string name="main_type">類型</string>
    <string name="main_varchar">異體標準</string>
    <string name="main_wordUse">用詞</string>
    <string name="menu_toast_unknown_error">發生了未知錯誤！</string>
    <string name="menu_toast_no_filemanager">找不到檔案管理器！</string>
    <string name="menu_toast_file_readwrite_error">讀寫檔案錯誤！</string>
    <string name="menu_popup_title">請選擇轉換類型：</string>
    <string name="menu_popup_type_0">（每次詢問）</string>
    <string name="menu_popup_type_1">簡體到 OpenCC 繁體（預設）</string>
    <string name="menu_popup_type_2">簡體到臺灣正體</string>
    <string name="menu_popup_type_3">簡體到香港繁體</string>
    <string name="menu_popup_type_4">簡體到臺灣正體（包括詞彙）</string>
    <string name="menu_popup_type_5">OpenCC 繁體到簡體（預設）</string>
    <string name="menu_popup_type_6">臺灣正體到簡體</string>
    <string name="menu_popup_type_7">香港繁體到簡體</string>
    <string name="menu_popup_type_8">臺灣正體到簡體（中國大陸詞彙）</string>
    <string name="menu_popup_type_9">OpenCC 繁體轉換爲臺灣異體</string>
    <string name="menu_popup_type_10">OpenCC 繁體轉換爲香港異體</string>
    <string name="menu_popup_type_S2T">簡-繁轉換</string>
    <string name="menu_popup_type_T2S">繁-簡轉換</string>
    <string name="menu_popup_type_T2T">港臺異體轉換</string>

    <string name="main_sel_file">檔案</string>
    <string name="main_conv_to_file">儲存檔案</string>

    <string name="cancel_button">取消</string>
    <string name="title_activity_about">關於</string>
    <string name="about_app_description">使用 OpenCC 的 Android 簡繁轉換器</string>
    <string name="about_text_version">版本</string>
    <string name="about_development">開發</string>
    <string name="about_developed_by">由 Fei 在 2019 冠狀病毒病疫情期間使用 Android Studio 開發，2020 年 5 月。</string>
    <string name="about_title_developed">開發</string>
    <string name="about_iatfei_link" translatable="false">https://iatfei.com</string>
    <string name="about_mysite">我的網站</string>
    <string name="about_email" translatable="false">kuan@iatfei.com</string>
    <string name="about_contact">聯絡我</string>
    <string name="about_app_license_details">本軟件以 GNU 通用公共許可證條款第三版（或更新版本）發佈。此條款允許你在遵守某些條件下，無需經本人同意即可重新發佈和修改本軟件。請點選以進入本程式的 GitHub 頁面獲得原始碼和版權資訊。</string>
    <string name="about_license">開放原始碼授權</string>
    <string name="about_restart_title" translatable="false">RE:START</string>
    <string name="about_restart_content" translatable="false">Those who care will come back; those who hate are unimportant.</string>
    <string name="about_restart" translatable="false">RE:START #2</string>
    <string name="about_story_app_content">Be together. Not the same.</string>
    <string name="about_app">關於此軟件</string>
    <string name="about_app_license">原始碼</string>
    <string name="app_name">中文轉換</string>
    <string name="main_variant_openccstandard">OpenCC（建議）</string>
    <string name="appintro_title_1">歡迎！</string>
    <string name="appintro_title_2">建議…</string>
    <string name="appintro_title_3_1">在軟件中直接轉換！（一）</string>
    <string name="appintro_title_3_2">在軟件中直接轉換！（二）</string>
    <string name="appintro_title_3_3">在軟件中直接轉換！（三）</string>
    <string name="appintro_title_4">感謝使用！</string>
    <string name="appintro_content_1">輕鬆轉換繁體與簡體。同時亦可轉換地區用詞或異體字。</string>
    <string name="appintro_content_2">如果只需要普通簡繁轉換，請使用簡易模式。</string>
    <string name="appintro_content_3_1">"在任何軟件選擇文字並按「繁簡轉換」即可轉換並取代原有文字。\n\n注意：某些軟件（如：WeChat、Telegram）無法使用此方式。請參考下一頁介紹。"</string>
    <string name="appintro_content_3_2">選擇文字後也可按「分享」後選擇「繁簡轉換」，並自行貼上轉換後的文字。</string>
    <string name="appintro_content_3_3">將本軟件的圖塊加入到快速設定面板後，複製任何文字後選擇「繁簡轉換」圖塊，並自行貼上轉換後的文字。</string>
    <string name="appintro_content_4">"我的第二個自行開發軟件。本軟件的成功全靠 OpenCC 項目的貢獻者。\n\n因自然語言的複雜性，完美轉換是不可能的，因此請務必仔細檢查。"</string>
    <string name="action_tutorial">教學</string>
    <string name="about_contributors">貢獻者</string>
    <string name="about_contributors_content">簡易模式提議及部分源碼：Renn</string>
    <string name="menu_settings">設定</string>
    <string name="settings_selmenu">彈出功能表</string>
    <string name="settings_simplemode_desc">在彈出功能表選擇轉換時，自動偵測繁簡並使用OpenCC標準轉換</string>
    <string name="settings_easymode">簡易模式</string>

    <string-array name="trad_to_simp">
        <item>（每次詢問）</item>
        <item>OpenCC 繁體到簡體（預設）</item>
        <item>臺灣正體到簡體</item>
        <item>香港繁體到簡體</item>
        <item>臺灣正體到簡體（中國大陸詞彙）</item>
        <item>OpenCC 繁體轉換爲臺灣異體</item>
        <item>OpenCC 繁體轉換爲香港異體</item>
    </string-array>
    <string-array name="simp_to_trad">
        <item>（每次詢問）</item>
        <item>簡體到 OpenCC 繁體（預設）</item>
        <item>簡體到臺灣正體</item>
        <item>簡體到香港繁體</item>
        <item>簡體到臺灣正體（臺灣詞彙）</item>
    </string-array>
    <string name="setting_trad">文字偵測為繁體中文時</string>
    <string name="settings_simp">文字偵測爲簡體中文時</string>
    <string name="settings_autodetect_desc">使用彈出功能表時，自動偵測繁簡中文並按照以下模式轉換</string>
    <string name="settings_autodetect">自動偵測繁簡</string>
    <string name="menu_autonotdetected">選擇的文字中沒有繁/簡獨有字或者不是中文</string>
    <string name="menu_cantdetect">無法偵測繁簡，請手動選擇：</string>

    <string name="tts_play">開始朗讀</string>
    <string name="tts_stop">停止朗讀</string>
    <string name="tts_playpause">開始/停止朗讀</string>
    <string name="lang_settings_category">語言設定</string>
    <string name="tts_settings_language">朗讀語言</string>
    <string name="tts_error_nolanguage">朗讀失敗，請檢查文字轉語音設定</string>
    <string-array name="tts_settings_languages">
        <item>國語（台灣）</item>
        <item>粵語（香港）</item>
        <item>普通話（中國）</item>
    </string-array>

    <string-array name="ui_lang_settings_languages">
        <item>系統預設</item>
        <item>正體中文</item>
        <item>簡體中文</item>
        <item>英文</item>
    </string-array>
    <string name="ui_lang_settings_language">界面語言</string>

    <string-array name="settings_replacement_options">
        <item>空格</item>
        <item>數字</item>
        <item>拉丁字母</item>
        <item>標點符號</item>
        <item>空行</item>
        <item>特殊符號</item>
        <item>諺文</item>
        <item>片假名及平假名</item>
        <item>注音符號</item>
    </string-array>
    <string name="settings_replacement_title">刪除特定文字</string>
    <string name="settings_text_processing_cat_title">文字處理</string>
    <string name="settings_text_processing_master_switch">進行文字處理</string>



    <string-array name="empty_array"/>
</resources>
