<!--
  ~ Copyright (c) 2020-2022 Fei Kuan.
  ~
  ~ This file is part of Chinese Converter
  ~ (see <https://github.com/fei0316/OpenCC-android-app>).
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/about_app"
        app:iconSpaceReserved="false">

    </PreferenceCategory>
    <Preference
        android:defaultValue="Default value"
        android:key="edit_text_preference_1"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="@string/about_app_description"
        android:title="@string/app_name"
        app:iconSpaceReserved="false" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_2"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="..."
        android:title="@string/about_text_version"
        app:iconSpaceReserved="false" />
    <PreferenceCategory
        android:title="@string/about_development"
        app:iconSpaceReserved="false" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_5"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="@string/about_developed_by"
        android:title="@string/about_title_developed"
        app:iconSpaceReserved="false" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_4"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="@string/about_iatfei_link"
        android:title="@string/about_mysite"
        app:iconSpaceReserved="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://iatfei.com" />
    </Preference>
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_8"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="@string/about_email"
        android:title="@string/about_contact"
        app:iconSpaceReserved="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="mailto:kuan@iatfei.com" />
    </Preference>
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_10"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="@string/about_contributors_content"
        android:title="@string/about_contributors"
        app:iconSpaceReserved="false" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_3"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="@string/about_app_license_details"
        android:title="@string/about_app_license"
        app:iconSpaceReserved="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/fei0316/OpenCC-android-app" />
    </Preference>
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_6"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/about_license"
        app:iconSpaceReserved="false" />
    <PreferenceCategory
        android:title="@string/about_restart_title"
        app:iconSpaceReserved="false" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_7"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="@string/about_restart_content"
        android:title="@string/about_restart"
        app:iconSpaceReserved="false" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_9"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:summary="@string/about_story_app_content"
        app:iconSpaceReserved="false" />

</PreferenceScreen>