<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:label="@string/menu_popup_title"
    android:minHeight="450dp"
    tools:context=".ConvertActivity">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/menu_popup_type_S2T" />

        <RadioButton
            android:id="@+id/popupRadioType1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/menu_popup_type_1" />

        <RadioButton
            android:id="@+id/popupRadioType2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_popup_type_2" />

        <RadioButton
            android:id="@+id/popupRadioType3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_popup_type_3" />

        <RadioButton
            android:id="@+id/popupRadioType4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_popup_type_4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/menu_popup_type_T2S" />

        <RadioButton
            android:id="@+id/popupRadioType5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_popup_type_5" />

        <RadioButton
            android:id="@+id/popupRadioType6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_popup_type_6" />

        <RadioButton
            android:id="@+id/popupRadioType7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_popup_type_7" />

        <RadioButton
            android:id="@+id/popupRadioType8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_popup_type_8" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/menu_popup_type_T2T" />

        <RadioButton
            android:id="@+id/popupRadioType9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_popup_type_9" />

        <RadioButton
            android:id="@+id/popupRadioType10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_popup_type_10" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/convert_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>